# chat-bot

./: .gitattributes  .gitignore  Makefile  create-configmap.sh  create-secret.sh  generate-env.sh  generate-gitattributes.sh  new-rust.sh  update-git-excludes.sh
chat-bot/: Cargo.toml  Dockerfile  lint.sh  prompt_q.md  push_to_dockerhub.sh
chat-bot/src/: main.rs
yaml/: deploy.yaml  service.yaml
